@@ -1,0 +1,21 @@
+/*
+ * testcode/unitmain.c - unit test main program for unbound.
+ *
+ * Copyright (c) 2007, NLnet Labs. All rights reserved.
+ *
+ * See LICENSE for the license.
+ *
+ */
+
+#include "config.h"
+
+int main(int argc, char* argv[])
+{
+	if(argc != 1) {
+		printf("usage: %s\n", argv[0]);
+		printf("\tperforms unit tests.\n");
+		return 1;
+	}
+	printf("Start of %s unit test.\n", PACKAGE_STRING);
+	return 0;
+}
